compiler/testData/asJava/lightClasses/compilationErrors/AnnotationModifiers.java
public final class A {
    private java.lang.String c;

    public A() { /* compiled code */ }

    @kotlin.jvm.Synchronized
    @kotlin.jvm.Strictfp
    public final synchronized strictfp void f() { /* compiled code */ }

    @org.jetbrains.annotations.NotNull
    public final java.lang.String getC() { /* compiled code */ }

    public final void setC(@org.jetbrains.annotations.NotNull java.lang.String p) { /* compiled code */ }
}